# matrixsim

./: .clang-format  CMakeLists.txt  HUB75.cpp  HUB75.h  README.md  display.cpp  display.h  driver.cpp  driver.h  imgBuffer.cpp  imgBuffer.h  main.cpp  util.h
driver/: HUB75.cpp  HUB75.h  display.cpp  display.h  driver.cpp  driver.h
matrix/: latch.cpp  latch.h  matrix-display.cpp  matrix-display.h  multiplexer.cpp  multiplexer.h  shift-register.cpp  shift-register.h
